Reviewing chapters for last minute changes

--- a/new_pages/combination_analysis.qmd
+++ b/new_pages/combination_analysis.qmd
@@ -86,7 +86,7 @@ To begin, we import the cleaned linelist of cases from a simulated Ebola epidemi
 
 
 
-```{r, echo=F}
+```{r, echo=F, warning=F, message=F}
 # import the linelist into R
 linelist_sym <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 ```
