--- a/new_pages/ggplot_basics.qmd
+++ b/new_pages/ggplot_basics.qmd
@@ -38,7 +38,7 @@ pacman::p_load(
 
 We import the dataset of cases from a simulated Ebola epidemic. If you want to follow along, <a href='https://github.com/appliedepi/epirhandbook_eng/raw/master/data/case_linelists/linelist_cleaned.rds' class='download-button'>click to download the "clean" linelist</a> (as .rds file). Import your data with the `import()` function from the **rio** package (it accepts many file types like .xlsx, .rds, .csv - see the [Import and export](importing.qmd) page for details).
 
-```{r,  echo=F}
+```{r,  echo=F, warning=F, message=F}
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 
 ```
@@ -612,7 +612,7 @@ A note on specifying the *legend* title: There is no one "legend title" argument
 
 One of the best parts of **ggplot2** is the amount of control you have over the plot - you can define anything! As mentioned above, the design of the plot that is *not* related to the data shapes/geometries are adjusted within the `theme()` function. For example, the plot background color, presence/absence of gridlines, and the font/size/color/alignment of text (titles, subtitles, captions, axis text...). These adjustments can be done in one of two ways:  
 
-* Add a [complete theme](https://ggplot2.tidyverse.org/reference/ggtheme.html).           * `theme_()` function to make sweeping adjustments - these include. `theme_classic()`, `theme_minimal()`, `theme_dark()`, `theme_light()` `theme_grey()`, `theme_bw()` among others.  
+* Add a [complete theme](https://ggplot2.tidyverse.org/reference/ggtheme.html). The function `theme_()` makes sweeping adjustments - these include: `theme_classic()`, `theme_minimal()`, `theme_dark()`, `theme_light()` `theme_grey()`, `theme_bw()` among others.  
 * Adjust each tiny aspect of the plot individually within `theme()`.  
 
 
@@ -775,7 +775,7 @@ Visualisations covered here include:
   * **Violin plot**, show the distribution of a continuous variable based on the symmetrical width of the 'violin'. 
   * **Sina plot**, are a combination of jitter and violin plots, where individual points are shown but in the symmetrical shape of the distribution (via **ggforce** package).  
 * **Scatter plot** for two continuous variables.  
-* **Heat plots** for three continuous variables (linked to [Heat plots](heatmaps.qmd) page)  
+* **Heat plots** for three continuous variables (linked to [Heat plots](heatmaps.qmd) page).  
 
 
 
