--- a/new_pages/gis.qmd
+++ b/new_pages/gis.qmd
@@ -148,7 +148,7 @@ Since we are taking a random sample of the cases, your results may look slightly
 
 Import data with the `import()` function from the **rio** package (it handles many file types like .xlsx, .csv, .rds - see the [Import and export](importing.qmd) page for details).  
 
-```{r, echo=F}
+```{r, echo=F, warning=F, message=F}
 # import clean case linelist
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))  
 ```
