--- a/new_pages/heatmaps.qmd
+++ b/new_pages/heatmaps.qmd
@@ -57,7 +57,7 @@ We begin from the case linelist of a simulated Ebola epidemic. If you want to fo
 The first 50 rows of the linelist are shown below for demonstration:  
 
 
-```{r, echo=F}
+```{r, echo=F, warning=F, message=F}
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 ```
 
@@ -233,7 +233,7 @@ Often in public health, one objective is to assess trends over time for many ent
 
 We begin by importing a dataset of daily malaria reports from many facilities. The reports contain a date, province, district, and malaria counts. See the page on [Download handbook and data](data_used.qmd) for information on how to download these data. Below are the first 30 rows:  
 
-```{r, echo=F}
+```{r, echo=F, warning=F, message=F}
 facility_count_data <- rio::import(here::here("data", "malaria_facility_count_data.rds")) %>% 
   select(location_name, data_date, District, malaria_tot)
 ```
