--- a/new_pages/phylogenetic_trees.qmd
+++ b/new_pages/phylogenetic_trees.qmd
@@ -108,7 +108,7 @@ tree
 
 Second, we import a table stored as a .csv file with additional information for each sequenced sample, such as gender, country of origin and attributes for antimicrobial resistance, using the `import()` function from the **rio** package:
 
-```{r, echo=F}
+```{r, echo=F, warning=F, message=F}
 sample_data <- import(here("data", "phylo", "sample_data_Shigella_tree.csv"))
 ```
 
