--- a/new_pages/rmarkdown.qmd
+++ b/new_pages/rmarkdown.qmd
@@ -49,7 +49,7 @@ To create a R Markdown output, you need to have the following installed:
 * Pandoc, which should come installed with RStudio. If you are not using RStudio, you can download Pandoc here: http://pandoc.org. 
 * If you want to generate PDF output (a bit trickier), you will need to install LaTeX. For R Markdown users who have not installed LaTeX before, we recommend that you install [TinyTeX](https://yihui.name/tinytex/). You can use the following commands: 
 
-```{r, eval=F}
+```{r, eval=F, warning=F, message=F}
 pacman::p_load(tinytex)     # install tinytex package
 tinytex::install_tinytex()  # R command to install TinyTeX software
 ```
@@ -61,7 +61,7 @@ tinytex::install_tinytex()  # R command to install TinyTeX software
 
 Install the **rmarkdown** R package. In this handbook we emphasize `p_load()` from **pacman**, which installs the package if necessary *and* loads it for use. You can also load installed packages with  `library()` from **base** R. See the page on [R basics](basics.qmd) for more information on R packages.  
 
-```{r, eval=F}
+```{r, eval=F, warning=F, message=F}
 pacman::p_load(rmarkdown)
 ```
 
