--- a/new_pages/shiny_basics.qmd
+++ b/new_pages/shiny_basics.qmd
@@ -252,7 +252,7 @@ This list is pretty straightforward, and shouldn't be too hard to do. It's now i
 
 First lets load our data. Since we're working with a new project, and we want to make it clean, we can create a new directory called data, and add our malaria data in there. We can run this code below in a testing script we will eventually delete when we clean up the structure of our app.
 
-```{r, echo = TRUE}
+```{r, echo = TRUE, warning=F}
 pacman::p_load(
      "tidyverse", 
      "lubridate"
@@ -261,7 +261,7 @@ pacman::p_load(
 # read data
 malaria_data <- rio::import(here::here("data", "malaria_facility_count_data.rds"))
 
-print(malaria_data)
+head(malaria_data)
 
 ```
 
@@ -277,7 +277,7 @@ malaria_data <- malaria_data %>%
                names_to = "age_group", 
                values_to = "cases_reported")
 
-print(malaria_data)
+head(malaria_data)
 
 ```
 
