--- a/new_pages/survey_analysis.qmd
+++ b/new_pages/survey_analysis.qmd
@@ -997,9 +997,9 @@ With **gtsummary** we can use the function `tbl_svysummary()` and the addition `
 ```{r gtsummary_table}
 
 ## using the survey package design object
-tbl_svysummary(base_survey_design, 
+tbl_svysummary(data = base_survey_design, 
                include = c(arrived, left, died),   ## define variables want to include
-               statistic = list(everything() ~ c("{n} ({p}%)"))) %>% ## define stats of interest
+               statistic = list(everything() ~ "{n} ({p}%)")) %>% ## define stats of interest
      add_ci() %>% ## add confidence intervals
   add_n() %>%
      modify_header(label = list(
