--- a/new_pages/survival_analysis.qmd
+++ b/new_pages/survival_analysis.qmd
@@ -607,7 +607,7 @@ ggforest(linelistsurv_cox, data = linelist_surv)
 <!-- ======================================================= -->
 ## Time-dependent covariates in survival models {}
 
-Some of the following sections have been adapted with permission from an excellent [introduction to survival analysis in R](https://www.emilyzabor.com/tutorials/survival_analysis_in_r_tutorial.html) by [Dr. Emily Zabor](https://www.emilyzabor.com/) 
+Some of the following sections have been adapted with permission from an excellent [introduction to survival analysis in R](https://www.emilyzabor.com/tutorials/survival_analysis_in_r_tutorial.html) by [Dr. Emily Zabor](https://www.emilyzabor.com/).
 
 In the last section we covered using Cox regression to examine associations between covariates of interest and survival outcomes.But these analyses rely on the covariate being measured at baseline, that is, before follow-up time for the event begins.
 
