--- a/new_pages/tables_presentation.qmd
+++ b/new_pages/tables_presentation.qmd
@@ -120,7 +120,8 @@ pacman::p_load(
   here,           # file pathways
   flextable,      # make HTML tables 
   officer,        # helper functions for tables
-  tidyverse)      # data management, summary, and visualization
+  tidyverse       # data management, summary, and visualization
+  )      
 
 ```
 
@@ -129,7 +130,7 @@ pacman::p_load(
 To begin, we import the cleaned linelist of cases from a simulated Ebola epidemic. If you want to follow along, <a href='https://github.com/appliedepi/epirhandbook_eng/raw/master/data/case_linelists/linelist_cleaned.rds' class='download-button'>click to download the "clean" linelist</a> (as .rds file). Import data with the `import()` function from the **rio** package (it handles many file types like .xlsx, .csv, .rds - see the [Import and export](importing.qmd) page for details). 
 
 
-```{r, echo=F}
+```{r, echo=F, message=F, warning=F}
 # import the linelist into R
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 ```
@@ -536,8 +537,10 @@ See detail in the [Reports with R Markdown](rmarkdown.qmd) page of this handbook
 <!-- ======================================================= -->
 ## Resources {  }
 
-The full **flextable** book is here: https://ardata-fr.github.io/flextable-book/
-The Github site is [here](https://davidgohel.github.io/flextable/)  
-A manual of all the **flextable** functions can be found [here](https://davidgohel.github.io/flextable/reference/index.html)
+The full **flextable** book is [here](https://ardata-fr.github.io/flextable-book/).
 
-A gallery of beautiful example **flextable** tables with code can be accessed [here](https://ardata.fr/en/flextable-gallery/)  
+The Github site is [here](https://davidgohel.github.io/flextable/).
+
+A manual of all the **flextable** functions can be found [here](https://davidgohel.github.io/flextable/reference/index.html).
+
+A gallery of beautiful example **flextable** tables with code can be accessed [here](https://ardata.fr/en/flextable-gallery/).  
