--- a/new_pages/transmission_chains.qmd
+++ b/new_pages/transmission_chains.qmd
@@ -106,7 +106,7 @@ pacman::p_install_gh("reconhub/epicontacts@timeline")
 
 We import the dataset of cases from a simulated Ebola epidemic. If you want to download the data to follow step-by-step, see instructions in the [Download handbook and data](data_used.qmd) page. The dataset is imported using the `import()` function from the **rio** package. See the page on [Import and export](importing.qmd) for various ways to import data.
 
-```{r, echo=F}
+```{r, echo=F, message=F, warning=F}
 # import the linelist into R
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 ```
