--- a/new_pages/writing_functions.qmd
+++ b/new_pages/writing_functions.qmd
@@ -31,7 +31,7 @@ We import the dataset of cases from a simulated Ebola epidemic. If you want to d
 
 We will also use in the last part of this page some data on H7N9 flu from 2013.
 
-```{r, echo=F}
+```{r, echo=F, warning=F, message=F}
 # import the linelists into R
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 
