small edits after first review of Arran's edits

--- a/new_pages/regression.qmd
+++ b/new_pages/regression.qmd
@@ -17,7 +17,7 @@ For Cox proportional hazard regression, see the [Survival analysis](survival_ana
 
 <!-- ======================================================= -->
 
-## Preparation {preparation}
+## Preparation {.unnumbered}
 
 
 ### Load packages {.unnumbered}
