--- a/new_pages/basics.qmd
+++ b/new_pages/basics.qmd
@@ -471,7 +471,7 @@ On installation, R contains **"base"** packages and functions that perform commo
 
 *Functions* are contained within **packages** which can be downloaded ("installed") to your computer from the internet. Once a package is downloaded, it is stored in your "library". You can then access the functions it contains during your current R session by "loading" the package.
 
-*Think of R as your personal library*: When you download a package, your library gains a new book of functions, but each time you want to use a function in that book, you must borrow,"load", that book from your library.
+*Think of R as your personal library*: When you download a package, your library gains a new book of functions, but each time you want to use a function in that book, you must borrow, "load", that book from your library.
 
 In summary: to use the functions available in an R package, 2 steps must be implemented:
 
@@ -528,7 +528,7 @@ library(rio)
 library(here)
 ```
 
-To check whether a package in installed or loaded, you can view the Packages pane in RStudio. If the package is installed, it is shown there with version number. If its box is checked, it is loaded for the current session.
+To check whether a package is installed or loaded, you can view the Packages pane in RStudio. If the package is installed, it is shown there with version number. If its box is checked, it is loaded for the current session.
 
 **Install from Github**
 
@@ -1015,7 +1015,7 @@ class(linelist$gender)  # class should be character
 Sometimes, a column will be converted to a different class automatically by R. Watch out for this! For example, if you have a vector or column of numbers, but a character value is inserted... the entire column will change to class character.
 
 ```{r}
-num_vector <- c(1, 2 , 3, 4, 5) # define vector as all numbers
+num_vector <- c(1, 2, 3, 4, 5) # define vector as all numbers
 class(num_vector)          # vector is numeric class
 num_vector[3] <- "three"   # convert the third element to a character
 class(num_vector)          # vector is now character class
@@ -1233,7 +1233,7 @@ You can think of it as saying "and then". Many functions can be linked together 
 Pipe operators were first introduced through the [magrittr package](https://magrittr.tidyverse.org/), which is part of tidyverse, and were specified as `%>%`. In R 4.1.0, they introduced a **base** R pipe which is specified through `|>`. The behaviour of the two pipes is the same, and they can be used somewhat interchangeably. However, there are a few key differences.
 
 * The `%>%` pipe allows you to pass multiple arguments.
-* The `%>%` pipe lets you drop parenthesis when calling a function with no other arguments (i.e. drop vs drop()).
+* The `%>%` pipe lets you drop parentheses when calling a function with no other arguments (i.e. `drop` vs `drop()`).
 * The `%>%` pipe allows you to start a pipe with `.` to create a function in your linking of code.
 
 For these reasons, we recommend the **magrittr** pipe, `%>%`, over the **base** R pipe, `|>`.
