--- a/new_pages/standardization.qmd
+++ b/new_pages/standardization.qmd
@@ -3,7 +3,7 @@
 
 This page will show you how to standardize an outcome, such as hospitalizations or mortality, by characteristics such as age and sex. 
 
-* Using **PHEindicatormethods** package  
+We focus on using the **PHEindicatormethods** package  
 
 We begin by extensively demonstrating the processes of data preparation/cleaning/joining, as this is common when combining population data from multiple countries, standard population data, deaths, etc.  
 
@@ -20,11 +20,11 @@ Let's say we would like to the standardize mortality rate by age and sex for cou
 
 To show how standardization is done, we will use fictitious population counts and death counts from  country A and country B, by age (in 5 year categories) and sex (female, male). To make the datasets ready for use, we will perform the following preparation steps:  
 
-1. Load packages. 
-2. Import datasets.  
-3. Join the population and death data from the two countries.
-4. Pivot longer so there is one row per age-sex stratum.
-5. Clean the reference population (world standard population) and join it to the country data.  
+1. Load packages 
+2. Import datasets  
+3. Join the population and death data from the two countries
+4. Pivot longer so there is one row per age-sex stratum
+5. Clean the reference population (world standard population) and join it to the country data  
 
 In your scenario, your data may come in a different format. Perhaps your data are by province, city, or other catchment area. You may have one row for each death and information on age and sex for each (or a significant proportion) of these deaths. In this case, see the pages on [Grouping data](grouping.qmd), [Pivoting data](pivoting.qmd), and [Descriptive tables](tables_descriptive.qmd) to create a dataset with event and population counts per age-sex stratum.  
 
