quarto page small edits

--- a/new_pages/quarto.qmd
+++ b/new_pages/quarto.qmd
@@ -67,7 +67,7 @@ This will create your new Quarto script. *Note: While the R Markdown scripts end
 
 While R Markdown scripts set the working directory to wherever the file is located, Quarto documents retain the original working directory. This is especially useful when you are working with an [R Project](r_projects.qmd).
 
-Your first view of the Quarto document may look different to what you are used to with an R Markdown document. This is because Quarto has the additional functionality of allow you to see what the rendered document will look like after it has been knit. To switch between the "Visual" and "Source" mode (which is what you see when you create an R Markdown document), click the "Visual" button in the top left side of the script.
+Like for R Markdown, Quarto used in RStudio allows you to see what the rendered document will look like after it has been knit. To switch between the "Visual" and "Source" mode, click the "Visual" button in the top left side of the script.
 
 ```{r out.width = "50%", fig.align = "center", echo=F}
 knitr::include_graphics(here::here("images", "quarto/3_quartovisual.PNG"))
