Updates to make sure github issues have been addressed

--- a/new_pages/characters_strings.qmd
+++ b/new_pages/characters_strings.qmd
@@ -1062,8 +1062,11 @@ You can view a useful list of regex expressions and tips on page 2 of [this chea
 
 Also see this [tutorial](https://towardsdatascience.com/a-gentle-introduction-to-regular-expressions-with-r-df5e897ca432).  
 
+Additionally, the package [**RVerbalExpressions**](https://rverbalexpressions.netlify.app/) can offer an easy way to construct regular expressions.
 
-
+```{r, eval = F}
+devtools::install_github("VerbalExpressions/RVerbalExpressions")
+```
 
 <!-- ======================================================= -->
 ## Resources { }
