--- a/new_pages/cleaning.qmd
+++ b/new_pages/cleaning.qmd
@@ -1853,7 +1853,7 @@ For example, this code applies `rowwise()` and then creates a new column that su
 ```{r,}
 linelist %>%
   rowwise() %>%
-  mutate(num_symptoms = sum(c(fever, chills, cough, aches, vomit) == "yes")) %>% 
+  mutate(num_symptoms = sum(c(fever, chills, cough, aches, vomit) == "yes"), na.rm =T) %>% 
   ungroup() %>% 
   select(fever, chills, cough, aches, vomit, num_symptoms) # for display
 ```
