--- a/new_pages/ggplot_basics.qmd
+++ b/new_pages/ggplot_basics.qmd
@@ -565,7 +565,7 @@ Exporting ggplots is made easy with the `ggsave()` function from **ggplot2**. It
   
 You can export as png, pdf, jpeg, tiff, bmp, svg, or several other file types, by specifying the file extension in the file path.  
 
-You can also specify the arguments `width = `, `height = `, and `units = ` (either "in", "cm", or "mm"). You can also specify `dpi = ` with a number for plot resolution (e.g. 300). See the function details by entering `?ggsave` or reading the [documentation online](https://ggplot2.tidyverse.org/reference/ggsave.html). 
+You can also specify the arguments `width = `, `height = `, and `units = ` (either "in", "cm", or "mm"). You can also specify `dpi = ` with a number for plot resolution (e.g. 300). You can also change the the background of your plot by using the argument `bg = `, where you specify the colour, i.e. `bg = "white". See the function details by entering `?ggsave` or reading the [documentation online](https://ggplot2.tidyverse.org/reference/ggsave.html). 
 
 Remember that you can use `here()` syntax to provide the desired file path. see the [Import and export](importing.qmd) page for more information.  
 
@@ -1152,10 +1152,10 @@ ggplot(outcomes2) +
     width = 0.5) +                   # thinner bars (out of 1)
   theme_minimal() +                  # Minimal theme 
   theme(legend.position = "bottom") +
-  labs(subtitle = "Number of recovered and dead Ebola cases, by hospital",
+  labs(subtitle = "Proportio of recovered and dead Ebola cases, by hospital",
        fill = "Outcome",             # legend title
-       y = "Count",                  # y axis title
-       x = "Hospital of admission") + # x axis title
+       x = "Proportion",                  # y axis title
+       y = "Hospital of admission") + # x axis title
   scale_fill_manual(                 # adding colors manually
     values = c("Death"= "#3B1c8C",
                "Recover" = "#21908D" )) 
