--- a/new_pages/ggplot_tips.qmd
+++ b/new_pages/ggplot_tips.qmd
@@ -912,7 +912,7 @@ linelist_secondary_axis <- linelist %>%
 ```
 
 **Calculate the scaling factor**  
-Now that we have created the datasets with our variables of interest, we want to extract the columns and calculate the maximum value in each in order to set our scale. We will then divide the secondary axis value by the first axis value in order to create our scaling factor
+Now that we have created the datasets with our variables of interest, we want to extract the columns and calculate the maximum value in each in order to set our scale. We will then divide the secondary axis value by the first axis value in order to create our scaling factor.
 
 ```{r, warning=F, message=F}
 
