--- a/new_pages/rmarkdown.qmd
+++ b/new_pages/rmarkdown.qmd
@@ -333,9 +333,19 @@ knitr::include_graphics(here::here("images", "markdown/tabbed_view.gif"))
 
 You can add an additional option `.tabset-pills` after `.tabset` to give the tabs themselves a "pilled" appearance. Be aware that when viewing the tabbed HTML output, the Ctrl+f search functionality will only search "active" tabs, not hidden tabs.  
 
+### **remedy** {.unnumbered}   
 
+remedy is an addin for R-Studio which helps with writing R Markdown scripts. It provides a user interface and series of keyboard shortcuts to format your text. 
 
+This package is installed directly from GitHub.
 
+```{r, eval = F}
+remotes::install_github("ThinkR-open/remedy")
+```
+
+Once installed, the package does not need to be re-loaded. It will automatically load when you start RStudio.
+
+For a full list of features and updates, please see [https://thinkr-open.github.io/remedy/](https://thinkr-open.github.io/remedy/)
 
 <!-- ======================================================= -->
 ## File structure {}
