--- a/new_pages/standardization.qmd
+++ b/new_pages/standardization.qmd
@@ -268,7 +268,7 @@ standard_pop_clean <- standard_pop_data %>%
           age_cat5 = str_replace_all(age_cat5, "plus", ""),    # remove "plus"
           age_cat5 = str_replace_all(age_cat5, " ", "")) %>%   # remove " " space
      
-     rename(pop = WorldStandardPopulation)   # change col name to "pop"
+     rename(pop = WorldStandardPopulation)
 ```
 
 <span style="color: orange;">**_CAUTION:_** If you try to use `str_replace_all()` to remove a plus *symbol*, it won't work because it is a special symbol. "Escape" the specialnes by putting two back slashes in front, as in `str_replace_call(column, "\\+", "")`. </span>
