--- a/new_pages/stat_tests.qmd
+++ b/new_pages/stat_tests.qmd
@@ -502,3 +502,9 @@ Much of the information in this page is adapted from these resources and vignett
 [corrr](https://corrr.tidymodels.org/articles/using-corrr.html)
 
 [sthda correlation](http://www.sthda.com/english/wiki/correlation-test-between-two-variables-in-r)
+
+Resources for statistical theory
+
+[Causal Inference: What If](https://www.hsph.harvard.edu/miguel-hernan/wp-content/uploads/sites/1268/2024/04/hernanrobins_WhatIf_26apr24.pdf)
+
+[Discovering statistics](https://discoveringstatistics.com/)
